@@ -1,9 +1,0 @@
-Obsoletes: pupmod-sudo-test >= 0.0.1
-Requires: pupmod-puppetlabs-concat < 4.0.0-0
-Requires: pupmod-puppetlabs-concat >= 2.2.0-0
-Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
-Requires: pupmod-puppetlabs-stdlib >= 4.13.1-0
-Requires: pupmod-simp-simpcat < 7.0.0-0
-Requires: pupmod-simp-simpcat >= 6.0.0-0
-Requires: pupmod-simp-simplib < 4.0.0-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
